terraform/aws/orb-snyk-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orb-snyk-deployment
  labels:
    app: orb-snyk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: orb-snyk
    spec:
      containers:
      - name: orb-snyk
        image: ariv3ra/orb-snyk:latest
        ports:
        - containerPort: 8080
