terraform/aws/orb-snyk-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "orb-snyk"
spec:
  selector:
    app: orb-snyk
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
